--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 regex = "1.5.4"
 chrono = { version = "0.4.19", features = ["serde"] }
+log = "0.4.14"
+env_logger = "0.9.0"
+anyhow = "1.0.56"
