--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# core libraries
 dirs = "4.0.0"
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0.79"
 regex = "1.5.4"
 chrono = { version = "0.4.19", features = ["serde"] }
+
+# serialization / deserialization
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
+serde_yaml = "0.8.23"
+
+# error libraries
 log = "0.4.14"
 env_logger = "0.9.0"
 anyhow = "1.0.56"
